Ensure locale-independence
Replace String.formatted() with String.format(Locale.ROOT, ...) to avoid
locale-dependent formatting. Replace toLowerCase()/toUpperCase() with explicit
Locale.ROOT variants. Specify UTF-8 charset explicitly when reading files.