@@ -19,6 +19,7 @@ import java.util.logging.Logger;
 import static ai.onnxruntime.OrtSession.SessionOptions.ExecutionMode.PARALLEL;
 import static ai.onnxruntime.OrtSession.SessionOptions.ExecutionMode.SEQUENTIAL;
 import static com.yahoo.yolean.Exceptions.throwUnchecked;
+import java.util.Locale;
 
 /**
  * Provides the classic embedded ONNX runtime based on the 'onnxruntime' Java library.
@@ -67,12 +68,11 @@ public class EmbeddedOnnxRuntime extends AbstractComponent implements OnnxRuntim
         synchronized (monitor) {
             sessions.forEach((id, sharedSession) -> {
                 int hash = System.identityHashCode(sharedSession.session());
-                log.warning("Closing leaked session %s (%s) with %d outstanding references:\n%s"
-                        .formatted(id, hash, sharedSession.retainCount(), sharedSession.currentState()));
+                log.warning(String.format(Locale.ROOT, "Closing leaked session %s (%s) with %d outstanding references:\n%s", id, hash, sharedSession.retainCount(), sharedSession.currentState()));
                 try {
                     sharedSession.session().close();
                 } catch (Exception e) {
-                    log.log(Level.WARNING, "Failed to close session %s (%s)".formatted(id, hash), e);
+                    log.log(Level.WARNING, String.format(Locale.ROOT, "Failed to close session %s (%s)", id, hash), e);
                 }
             });
             sessions.clear();
@@ -154,7 +154,7 @@ public class EmbeddedOnnxRuntime extends AbstractComponent implements OnnxRuntim
             var ortSession = model.path().isPresent()
                     ? ortEnvironment().createSession(model.path().get(), sessionOpts)
                     : ortEnvironment().createSession(model.data().get(), sessionOpts);
-            log.fine(() -> "Created new session (%s)".formatted(System.identityHashCode(ortSession)));
+            log.fine(() -> String.format(Locale.ROOT, "Created new session (%s)", System.identityHashCode(ortSession)));
             var sharedSession = new SharedOrtSession(sessionId, ortSession);
             var referencedSession = sharedSession.newReference();
             sessions.put(sessionId, sharedSession);
@@ -219,7 +219,7 @@ public class EmbeddedOnnxRuntime extends AbstractComponent implements OnnxRuntim
         protected void destroy() {
             try {
                 removeSession(id);
-                log.fine(() -> "Closing session (%s)".formatted(System.identityHashCode(session)));
+                log.fine(() -> String.format(Locale.ROOT, "Closing session (%s)", System.identityHashCode(session)));
                 session.close();
             } catch (OrtException e) { throw new OnnxRuntimeException(e); }
         }
