@@ -26,6 +26,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import org.junit.jupiter.api.function.ThrowingSupplier;
+import java.util.Locale;
 
 /**
  * @author bjorncs
@@ -118,11 +119,11 @@ class TritonOnnxRuntimeTest {
         var opts = optsBuilder.build();
 
         var modelBaseName1 = "dummy_transformer";
-        var modelPath1 = "src/test/models/onnx/transformer/%s.onnx".formatted(modelBaseName1);
+        var modelPath1 = String.format(Locale.ROOT, "src/test/models/onnx/transformer/%s.onnx", modelBaseName1);
         var modelName1 = TritonOnnxRuntime.generateModelName(modelPath1, opts);
 
         var modelBaseName2 = "dummy_transformer_mlm";
-        var modelPath2 = "src/test/models/onnx/transformer/%s.onnx".formatted(modelBaseName2);
+        var modelPath2 = String.format(Locale.ROOT, "src/test/models/onnx/transformer/%s.onnx", modelBaseName2);
         var modelName2 = TritonOnnxRuntime.generateModelName(modelPath2, opts);
 
         var client = createClient();
@@ -176,7 +177,7 @@ class TritonOnnxRuntimeTest {
         var opts = optsBuilder.build();
 
         var modelBaseName = "dummy_transformer";
-        var modelPath = "src/test/models/onnx/transformer/%s.onnx".formatted(modelBaseName);
+        var modelPath = String.format(Locale.ROOT, "src/test/models/onnx/transformer/%s.onnx", modelBaseName);
         var modelName = TritonOnnxRuntime.generateModelName(modelPath, opts);
 
         var client = createClient();
@@ -217,10 +218,10 @@ class TritonOnnxRuntimeTest {
     // expectedConfigPath == null means we expect an error during model loading
     private void assertLoadModel(String expectedConfigPath, OnnxEvaluatorOptions evalOpts) throws IOException {
         var modelBaseName = "dummy_transformer";
-        var testModelFilePath = String.format("src/test/models/onnx/transformer/%s.onnx", modelBaseName);
+        var testModelFilePath = String.format(Locale.ROOT, "src/test/models/onnx/transformer/%s.onnx", modelBaseName);
         var modelName = TritonOnnxRuntime.generateModelName(testModelFilePath, evalOpts);
-        var modelFilePath = String.format("%s/1/model.onnx", modelName);
-        var modelConfigPath = String.format("%s/config.pbtxt", modelName);
+        var modelFilePath = String.format(Locale.ROOT, "%s/1/model.onnx", modelName);
+        var modelConfigPath = String.format(Locale.ROOT, "%s/config.pbtxt", modelName);
         var runtime = createRuntime();
 
         try {
